--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
   font-size: 15px;
   font-family: var(--family-inter);
   padding: 4%;
+  position: relative;
 }
 
 /*
@@ -50,6 +51,10 @@ p {
   line-height: 1.5;
 }
 
+a {
+  text-decoration: none;
+}
+
 button {
   border: none;
   padding: 13px 30px;
@@ -57,6 +62,7 @@ button {
   font-size: 13px;
   font-weight: 700;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 /* ======= Navbar ======= */
@@ -86,6 +92,54 @@ button {
   display: none;
 }
 
+/*
+  Menu flotante fixed con altura de toda la pantalla
+*/
+.menu {
+  position: fixed;
+  background-color: rgb(255, 255, 255);
+  width: 70%;
+  height: 100vh;
+  top: 0;
+  right: 0;
+  z-index: 5001;
+  transform: translateX(0px);
+}
+
+/* 
+  Posición absoluta al icono de cerrado y a la navegación
+  para ubicarlos correctamente
+*/
+.menu__icon-close {
+  position: absolute;
+  top: 25px;
+  right: 15px;
+}
+
+.navigation {
+  position: absolute;
+  top: 25%;
+  left: 25px;
+}
+
+.navigation a {
+  display: block;
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+/* Efecto de oscurecimiento */
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  top: 0;
+  left: 0;
+  z-index: 5000;
+}
+
 /* ======= Layout ======= */
 
 /* ======= Main New ======= */
@@ -112,6 +166,10 @@ button {
 .main-new button {
   background-color: var(--soft-red);
   color: var(--off-white);
+}
+
+.main-new button:hover {
+  background-color: var(--very-dark-blue);
 }
 
 /* ======= Aside News ======= */
@@ -161,6 +219,7 @@ button {
 
 .newsbar__new h3:hover {
   color: var(--soft-orange);
+  cursor: pointer;
 }
 
 .newsbar__new p {
@@ -210,6 +269,7 @@ button {
   color: var(--grayish-blue);
 }
 
-.new__information:hover {
+.new__information h3:hover {
   color: var(--soft-red);
+  cursor: pointer;
 }
