--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,17 @@ body {
   position: relative;
 }
 
+@media (min-width: 680px) {
+  body {
+    padding: 6%;
+  }
+}
+
+@media (min-width: 1080px) {
+  body {
+    padding: 7% 12%;
+  }
+}
 /*
   El ancho de las imágenes no pasará de más allá de su
   contenedor padre.
@@ -57,9 +68,9 @@ a {
 
 button {
   border: none;
-  padding: 13px 30px;
+  padding: 15px 30px;
   letter-spacing: 4.5px;
-  font-size: 13px;
+  font-size: 0.9em;
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
@@ -79,13 +90,29 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3% 0;
-  margin-bottom: 20px;
+  margin: 15px 0px 60px 0px;
+}
+
+@media (min-width: 1080px) {
+  .navbar {
+    margin: 0px 0px 60px 0px;
+  }
 }
 
 .logo {
   width: 40px;
   height: auto;
+}
+@media (min-width: 680px) {
+  .logo {
+    width: 50px;
+  }
+}
+
+@media (min-width: 1080px) {
+  .logo {
+    width: 60px;
+  }
 }
 
 .d-none {
@@ -103,7 +130,16 @@ button {
   top: 0;
   right: 0;
   z-index: 5001;
-  transform: translateX(0px);
+}
+
+@media (min-width: 1080px) {
+  .menu {
+    position: relative;
+    background-color: transparent;
+    width: fit-content;
+    height: auto;
+    display: block;
+  }
 }
 
 /* 
@@ -116,17 +152,46 @@ button {
   right: 15px;
 }
 
+@media (min-width: 1080px) {
+  .menu__icon-close {
+    display: none;
+  }
+
+  .navbar__icon-menu {
+    display: none;
+  }
+}
+
 .navigation {
   position: absolute;
   top: 25%;
   left: 25px;
 }
 
+@media (min-width: 1080px) {
+  .navigation {
+    position: relative;
+  }
+}
+
 .navigation a {
   display: block;
   color: rgb(0, 0, 0);
-  font-size: 18px;
+  font-size: 1.3em;
   margin-bottom: 30px;
+}
+
+.navigation a:hover {
+  color: var(--soft-red);
+}
+
+@media (min-width: 1080px) {
+  .navigation a {
+    display: inline-block;
+    font-size: 1em;
+    color: var(--dark-grayish-blue);
+    margin: 0px 18px;
+  }
 }
 
 /* Efecto de oscurecimiento */
@@ -140,71 +205,9 @@ button {
   z-index: 5000;
 }
 
-/* ======= Layout ======= */
-
-/*
-  -------- Móviles
-*/
-main {
-  display: grid;
-  grid-template-areas:
-    "main-news"
-    "secondary-news";
-}
-
-.main-news {
-  grid-area: main-news;
-}
-
-.secondary-news {
-  grid-area: secondary-news;
-}
-
-/*
-  -------- Tablets
-*/
-@media screen and (min-width: 680px) and (max-width: 900px) {
-  .main-news {
-    display: grid;
-    grid-template-areas:
-      "image image "
-      "info aside";
-    gap: 20px;
-  }
-
-  .main-news img {
-    grid-area: image;
-  }
-
-  .main-new__info {
-    grid-area: info;
-  }
-
-  .newsbar {
-    grid-area: aside;
-  }
-}
-
-/* -------- Desktop */
-@media (min-width: 900px) {
-  .main-news {
-    display: grid;
-    grid-template-areas:
-      "image image aside"
-      "info info aside";
-    gap: 20px;
-  }
-
-  .main-news img {
-    grid-area: image;
-  }
-
-  .main-new__info {
-    grid-area: info;
-  }
-
-  .newsbar {
-    grid-area: aside;
+@media (min-width: 1340px) {
+  .overlay {
+    display: none;
   }
 }
 
@@ -219,6 +222,15 @@ main {
   Darle un color de fondo y color de letra al boton
   de la noticia principal.
 */
+@media (min-width: 980px) {
+  .main-news {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 30px;
+  }
+}
+
 @media (min-width: 480px) {
   .main-news img {
     content: url("../assets/images/image-web-3-desktop.jpg");
@@ -226,9 +238,18 @@ main {
 }
 
 .main-news h1 {
-  font-size: 42px;
+  font-size: 2.8em;
   font-weight: 800;
   margin: 20px 0;
+  color: var(--very-dark-blue);
+}
+
+@media (min-width: 1340px) {
+  .main-news h1 {
+    margin: 0;
+    font-size: 3.6em;
+    line-height: 1;
+  }
 }
 
 .main-news p {
@@ -242,6 +263,32 @@ main {
 
 .main-news button:hover {
   background-color: var(--very-dark-blue);
+}
+
+@media (min-width: 1340px) {
+  .main-news__container {
+    flex-basis: 68%;
+  }
+
+  .main-news__information {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 30px;
+  }
+
+  .main-news__information h1 {
+    flex-basis: 50%;
+  }
+
+  .information__description {
+    flex-basis: 50%;
+  }
+
+  .information__description p {
+    margin-bottom: 40px;
+  }
 }
 
 /* ======= Aside News ======= */
@@ -271,17 +318,19 @@ main {
 @media (min-width: 680px) {
   .newsbar {
     margin-top: 20px;
+    padding: 30px 20px 16px 20px;
   }
 }
-@media (min-width: 900px) {
+
+@media (min-width: 980px) {
   .newsbar {
-    margin-top: 0;
+    margin: 0;
   }
 }
 
 .newsbar h2 {
   color: var(--soft-orange);
-  font-size: 28px;
+  font-size: 2em;
 }
 
 .newsbar__new {
@@ -309,6 +358,28 @@ main {
   color: var(--grayish-blue);
 }
 
+@media (min-width: 1340px) {
+  .newsbar {
+    flex-basis: 32%;
+  }
+
+  .newsbar h2 {
+    font-size: 2.4em;
+  }
+
+  .newsbar__new {
+    padding-bottom: 10px;
+  }
+
+  .newsbar__new h3 {
+    margin-bottom: 9px;
+  }
+
+  .newsbar__new p {
+    line-height: 1.7;
+  }
+}
+
 /* ======= Secondary News ======= */
 
 /*
@@ -328,9 +399,23 @@ main {
   margin: 60px 0;
 }
 
+@media (min-width: 760px) {
+  .secondary-news {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+}
+
+@media (min-width: 1340px) {
+  .secondary-news {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
 .secondary-news__new {
   display: flex;
-  gap: 20px;
+  gap: 25px;
   margin-bottom: 30px;
 }
 
@@ -347,7 +432,7 @@ main {
 }
 
 .new__id {
-  font-size: 30px;
+  font-size: 2em;
   font-weight: 700;
   color: var(--grayish-blue);
 }
@@ -355,4 +440,18 @@ main {
 .new__information h3:hover {
   color: var(--soft-red);
   cursor: pointer;
+}
+
+@media (min-width: 1340px) {
+  .secondary-news__new img {
+    width: 95px;
+  }
+
+  .new__information h3 {
+    margin-bottom: 10px;
+  }
+
+  .new__information p {
+    line-height: 1.7;
+  }
 }
